--- a/prueba.html
+++ b/prueba.html
@@ -19,214 +19,219 @@
       <th>Miniatura</th>
     </tr>
     <tr>
+      <td>Episode_001</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/8sBgqzC1POw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_003.jpg" alt="Episode_003.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
       <td>Episode_003</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_003.jpg"><img class="w3-round" src="assets/img/Episode_003.jpg" alt="Episode_003.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/tegxh3BeCtI"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_003.jpg" alt="Episode_003.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_004</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_004.jpg"><img class="w3-round" src="assets/img/Episode_004.jpg" alt="Episode_004.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/4rz8MIT-Ci0"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_004.jpg" alt="Episode_004.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_005</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_005.jpg"><img class="w3-round" src="assets/img/Episode_005.jpg" alt="Episode_005.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/qwr3eOwhUwY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_005.jpg" alt="Episode_005.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_006</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_006.jpg"><img class="w3-round" src="assets/img/Episode_006.jpg" alt="Episode_006.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/bkEfUmPWPKE"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_006.jpg" alt="Episode_006.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_008</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_008.jpg"><img class="w3-round" src="assets/img/Episode_008.jpg" alt="Episode_008.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/rLDOkcv2dGA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_008.jpg" alt="Episode_008.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_010</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_010.jpg"><img class="w3-round" src="assets/img/Episode_010.jpg" alt="Episode_010.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/P3OcPmgMyd8"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_010.jpg" alt="Episode_010.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_013</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_013.jpg"><img class="w3-round" src="assets/img/Episode_013.jpg" alt="Episode_013.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/Abb7OaNsaHw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_013.jpg" alt="Episode_013.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_017</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_017.jpg"><img class="w3-round" src="assets/img/Episode_017.jpg" alt="Episode_017.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/TIYKTknTRK8"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_017.jpg" alt="Episode_017.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_018</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_018.jpg"><img class="w3-round" src="assets/img/Episode_018.jpg" alt="Episode_018.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/y6eoFAYcjS4"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_018.jpg" alt="Episode_018.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_020</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_020.jpg"><img class="w3-round" src="assets/img/Episode_020.jpg" alt="Episode_020.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/4UwpehNAnFM"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_020.jpg" alt="Episode_020.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_022</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_022.jpg"><img class="w3-round" src="assets/img/Episode_022.jpg" alt="Episode_022.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/XhRmM8SJAUs"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_022.jpg" alt="Episode_022.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_023</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_023.jpg"><img class="w3-round" src="assets/img/Episode_023.jpg" alt="Episode_023.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/FNJdXytEcWw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_023.jpg" alt="Episode_023.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_026</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_026.jpg"><img class="w3-round" src="assets/img/Episode_026.jpg" alt="Episode_026.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/uL0hF_nj0pU"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_026.jpg" alt="Episode_026.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_028</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_028.jpg"><img class="w3-round" src="assets/img/Episode_028.jpg" alt="Episode_028.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/XG_HZmU8IOk"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_028.jpg" alt="Episode_028.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_030</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_030.jpg"><img class="w3-round" src="assets/img/Episode_030.jpg" alt="Episode_030.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/jyN49E1L0Og"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_030.jpg" alt="Episode_030.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_038</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_038.jpg"><img class="w3-round" src="assets/img/Episode_038.jpg" alt="Episode_038.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/eRN_6u6bILU"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_038.jpg" alt="Episode_038.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_039</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_039.jpg"><img class="w3-round" src="assets/img/Episode_039.jpg" alt="Episode_039.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/T7DABGTtYlw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_039.jpg" alt="Episode_039.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_041</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_041.jpg"><img class="w3-round" src="assets/img/Episode_041.jpg" alt="Episode_041.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/dkcSUTA-qwE"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_041.jpg" alt="Episode_041.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_042</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_042.jpg"><img class="w3-round" src="assets/img/Episode_042.jpg" alt="Episode_042.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/clfhMmMd6kY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_042.jpg" alt="Episode_042.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_046</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_046.jpg"><img class="w3-round" src="assets/img/Episode_046.jpg" alt="Episode_046.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/HWGmYTf4IEo"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_046.jpg" alt="Episode_046.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_047</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_047.jpg"><img class="w3-round" src="assets/img/Episode_047.jpg" alt="Episode_047.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/kMJOQjm0oiU"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_047.jpg" alt="Episode_047.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_049</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_049.jpg"><img class="w3-round" src="assets/img/Episode_049.jpg" alt="Episode_049.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/at_rAyDldtE"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_049.jpg" alt="Episode_049.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_051</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_051.jpg"><img class="w3-round" src="assets/img/Episode_051.jpg" alt="Episode_051.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/K7jEj4renfA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_051.jpg" alt="Episode_051.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_052</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_052.jpg"><img class="w3-round" src="assets/img/Episode_052.jpg" alt="Episode_052.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/39xe_-sn5jc"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_052.jpg" alt="Episode_052.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_057</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_057.jpg"><img class="w3-round" src="assets/img/Episode_057.jpg" alt="Episode_057.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/T1tt9kmwG7o"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_057.jpg" alt="Episode_057.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_061</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_061.jpg"><img class="w3-round" src="assets/img/Episode_061.jpg" alt="Episode_061.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/HtxFpK9wreo"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_061.jpg" alt="Episode_061.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_065</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_065.jpg"><img class="w3-round" src="assets/img/Episode_065.jpg" alt="Episode_065.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/k4mugmfF610"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_065.jpg" alt="Episode_065.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_067</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_067.jpg"><img class="w3-round" src="assets/img/Episode_067.jpg" alt="Episode_067.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/0YJL9tLGrqA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_067.jpg" alt="Episode_067.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_069</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_069.jpg"><img class="w3-round" src="assets/img/Episode_069.jpg" alt="Episode_069.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/QFSMpnIUugs"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_069.jpg" alt="Episode_069.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_071</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_071.jpg"><img class="w3-round" src="assets/img/Episode_071.jpg" alt="Episode_071.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/WamTEsDW7G4"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_071.jpg" alt="Episode_071.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_075</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_075.jpg"><img class="w3-round" src="assets/img/Episode_075.jpg" alt="Episode_075.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/WtW8pKOgm9c"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_075.jpg" alt="Episode_075.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_076</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_076.jpg"><img class="w3-round" src="assets/img/Episode_076.jpg" alt="Episode_076.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/62wvSN_SeRY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_076.jpg" alt="Episode_076.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_080</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_080.jpg"><img class="w3-round" src="assets/img/Episode_080.jpg" alt="Episode_080.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/UcrCmiKR8ik"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_080.jpg" alt="Episode_080.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_081</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_081.jpg"><img class="w3-round" src="assets/img/Episode_081.jpg" alt="Episode_081.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/_hh4d1o7Ai8"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_081.jpg" alt="Episode_081.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_085</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_085.jpg"><img class="w3-round" src="assets/img/Episode_085.jpg" alt="Episode_085.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/RmtOrncWZCY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_085.jpg" alt="Episode_085.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_088</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_088.jpg"><img class="w3-round" src="assets/img/Episode_088.jpg" alt="Episode_088.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/VgllJRJvoTA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_088.jpg" alt="Episode_088.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_089</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_089.jpg"><img class="w3-round" src="assets/img/Episode_089.jpg" alt="Episode_089.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/Ba92LphJ8O0"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_089.jpg" alt="Episode_089.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_096</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_096.jpg"><img class="w3-round" src="assets/img/Episode_096.jpg" alt="Episode_096.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/GNyAv33K7PM"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_096.jpg" alt="Episode_096.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_097</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_097.jpg"><img class="w3-round" src="assets/img/Episode_097.jpg" alt="Episode_097.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/C-MEGTx8K30"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_097.jpg" alt="Episode_097.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_101</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_101.jpg"><img class="w3-round" src="assets/img/Episode_101.jpg" alt="Episode_101.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/6I6n_J6l5a4"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_101.jpg" alt="Episode_101.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_103</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_103.jpg"><img class="w3-round" src="assets/img/Episode_103.jpg" alt="Episode_103.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/buyVh1Tb5To"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_103.jpg" alt="Episode_103.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_104</td>
       <td>Puntos</td>
-      <td><a href="assets/img/Episode_104.jpg"><img class="w3-round" src="assets/img/Episode_104.jpg" alt="Episode_104.jpg" style="width:100px"></a></td>
+      <td><a href="https://youtu.be/I8YAltx4YmY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_104.jpg" alt="Episode_104.jpg" style="width:100px"></a></td>
     </tr>
   </table>
 
