--- a/index.html
+++ b/index.html
@@ -5,226 +5,235 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lista de trabajos</title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <title>Document</title>
 </head>
 
 <body>
-  <h3>Episodio 001</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qkyqrw5s2e0fwe1/Episode_001.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 003</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/3yc7i5c1hs7ctgb/Episode_003.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 004</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ery331my9nrwb7n/Episode_004.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 005</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/86eoq252ki1vekc/Episode_005.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 006</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qswfmofah3nyntw/Episode_006.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 008</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/uet8t0uq8ivaymq/Episode_008.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 010</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qjowgjtm88ur6ys/Episode_010.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 013</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/lckfesxutu2ijl7/Episode_013.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 017</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/7jycdkh3fcdfc47/Episode_017.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 018</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/vjykh2nfc1k0b83/Episode_018.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 020</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ywkuysbf8pex8ul/Episode_020.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 022</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ivojod1agfv3hwc/Episode_022.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 023</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/5n41356ccganx62/Episode_023.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 026</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/fk3im1ogvdpneye/Episode_026.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 028</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ewquykesx4g06q4/Episode_028.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 030</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/jyku9tobn4ochtg/Episode_030.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 038</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/lat9io9fjy36ghz/Episode_038.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 039</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/9qp75i7efvsh96d/Episode_039.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 041</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/mhnrsnsg6lpf3rn/Episode_041.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 042</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/hr7h8m3jn27yyr6/Episode_042.ogg?raw=1" type="video/ogg">
-  </video>
-
-  <h3>Episodio 046</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qcvgjx8wsow7hav/Episode_046.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 047</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/4szdxo1die2834i/Episode_047.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 049</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/7onszxgrle9jzz0/Episode_049.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 051</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/2qudg9m13ayjtnb/Episode_051.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 052</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/nf7nbbx5rc4k04w/Episode_052.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 057</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/xxi69orr05o8tbz/Episode_057.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 061</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/y0va8qwiqldef66/Episode_061.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 065</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/p5nuqg4xp4oazlw/Episode_065.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 067</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/9pbtd9k7m7mhjx9/Episode_067.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 069</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/3atbb6f8lyp2uhp/Episode_069.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 071</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/wzd86iqdkec47ku/Episode_071.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 075</h3>
-  <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/2zxs9qw4vznu1d1/Episode_075.ogg?dl=0" type="video/ogg">
-  </video>
-
-  <h3>Episodio 076</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_076.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 080</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_080.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 081</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_081.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 085</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_085.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 088</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_088.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 089</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_089.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 096</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_096.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 097</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_097.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 101</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_101.ogg" type="video/ogg">
-  </video>
 
 
-  <h3>Episodio 103</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_103.ogg" type="video/ogg">
-  </video>
-
-  <h3>Episodio 104</h3>
-  <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_104.ogg" type="video/ogg">
-  </video>
-
+  <table class="w3-container w3-table w3-striped w3-bordered w3-hoverable" style="width:80%">
+    <tr class="w3-grey">
+      <th>Nombre</th>
+      <th>Valoración</th>
+      <th>Miniatura</th>
+    </tr>
+    <tr>
+      <td>Episode_001</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/8sBgqzC1POw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_003.jpg" alt="Episode_003.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_003</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/tegxh3BeCtI"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_003.jpg" alt="Episode_003.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_004</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/4rz8MIT-Ci0"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_004.jpg" alt="Episode_004.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_005</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/qwr3eOwhUwY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_005.jpg" alt="Episode_005.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_006</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/bkEfUmPWPKE"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_006.jpg" alt="Episode_006.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_008</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/rLDOkcv2dGA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_008.jpg" alt="Episode_008.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_010</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/P3OcPmgMyd8"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_010.jpg" alt="Episode_010.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_013</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/Abb7OaNsaHw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_013.jpg" alt="Episode_013.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_017</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/TIYKTknTRK8"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_017.jpg" alt="Episode_017.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_018</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/y6eoFAYcjS4"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_018.jpg" alt="Episode_018.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_020</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/4UwpehNAnFM"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_020.jpg" alt="Episode_020.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_022</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/XhRmM8SJAUs"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_022.jpg" alt="Episode_022.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_023</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/FNJdXytEcWw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_023.jpg" alt="Episode_023.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_026</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/uL0hF_nj0pU"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_026.jpg" alt="Episode_026.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_028</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/XG_HZmU8IOk"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_028.jpg" alt="Episode_028.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_030</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/jyN49E1L0Og"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_030.jpg" alt="Episode_030.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_038</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/eRN_6u6bILU"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_038.jpg" alt="Episode_038.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_039</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/T7DABGTtYlw"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_039.jpg" alt="Episode_039.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_041</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/dkcSUTA-qwE"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_041.jpg" alt="Episode_041.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_042</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/clfhMmMd6kY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_042.jpg" alt="Episode_042.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_046</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/HWGmYTf4IEo"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_046.jpg" alt="Episode_046.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_047</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/kMJOQjm0oiU"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_047.jpg" alt="Episode_047.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_049</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/at_rAyDldtE"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_049.jpg" alt="Episode_049.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_051</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/K7jEj4renfA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_051.jpg" alt="Episode_051.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_052</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/39xe_-sn5jc"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_052.jpg" alt="Episode_052.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_057</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/T1tt9kmwG7o"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_057.jpg" alt="Episode_057.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_061</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/HtxFpK9wreo"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_061.jpg" alt="Episode_061.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_065</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/k4mugmfF610"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_065.jpg" alt="Episode_065.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_067</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/0YJL9tLGrqA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_067.jpg" alt="Episode_067.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_069</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/QFSMpnIUugs"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_069.jpg" alt="Episode_069.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_071</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/WamTEsDW7G4"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_071.jpg" alt="Episode_071.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_075</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/WtW8pKOgm9c"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_075.jpg" alt="Episode_075.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_076</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/62wvSN_SeRY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_076.jpg" alt="Episode_076.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_080</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/UcrCmiKR8ik"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_080.jpg" alt="Episode_080.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_081</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/_hh4d1o7Ai8"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_081.jpg" alt="Episode_081.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_085</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/RmtOrncWZCY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_085.jpg" alt="Episode_085.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_088</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/VgllJRJvoTA"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_088.jpg" alt="Episode_088.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_089</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/Ba92LphJ8O0"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_089.jpg" alt="Episode_089.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_096</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/GNyAv33K7PM"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_096.jpg" alt="Episode_096.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_097</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/C-MEGTx8K30"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_097.jpg" alt="Episode_097.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_101</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/6I6n_J6l5a4"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_101.jpg" alt="Episode_101.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_103</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/buyVh1Tb5To"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_103.jpg" alt="Episode_103.jpg" style="width:100px"></a></td>
+    </tr>
+    <tr>
+      <td>Episode_104</td>
+      <td>Puntos</td>
+      <td><a href="https://youtu.be/I8YAltx4YmY"><img class="w3-round w3-hover-sepia" src="assets/img/Episode_104.jpg" alt="Episode_104.jpg" style="width:100px"></a></td>
+    </tr>
+  </table>
 
 </body>
 
