--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <title>Document</title>
+  <title>Trabajo final Inkscape - IES Sorolla 2018</title>
   <style>
   body {
     font-family:"Segoe UI",Arial,sans-serif;
