--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   body {
     font-family:"Segoe UI",Arial,sans-serif;
   }
+  table th {
+    font-style: italic;
+  }
 
   </style>
 </head>
@@ -23,222 +26,222 @@
   <table class="w3-container w3-table w3-striped w3-bordered w3-hoverable" style="">
     <tr class="w3-grey w3-large">
       <th>Nombre</th>
-      <th>Valoración</th>
+      <th class="w3-center">Valoración</th>
       <th class="w3-right-align">Miniatura</th>
     </tr>
     <tr>
       <td>Episode_001</td>
-      <td class="">1</td>
+      <td class="w3-center">1</td>
       <td><a href="https://youtu.be/8sBgqzC1POw"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_001.jpg" alt="Episode_001.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_003</td>
-      <td class="">1</td>
+      <td class="w3-center">1</td>
       <td><a href="https://youtu.be/tegxh3BeCtI"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_003.jpg" alt="Episode_003.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_004</td>
-      <td class="">1</td>
+      <td class="w3-center">1</td>
       <td><a href="https://youtu.be/4rz8MIT-Ci0"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_004.jpg" alt="Episode_004.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_005</td>
-      <td class="">1</td>
+      <td class="w3-center">1</td>
       <td><a href="https://youtu.be/qwr3eOwhUwY"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_005.jpg" alt="Episode_005.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_006</td>
-      <td class="">2</td>
+      <td class="w3-center">2</td>
       <td><a href="https://youtu.be/bkEfUmPWPKE"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_006.jpg" alt="Episode_006.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_008</td>
-      <td class="">2</td>
+      <td class="w3-center">2</td>
       <td><a href="https://youtu.be/rLDOkcv2dGA"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_008.jpg" alt="Episode_008.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_010</td>
-      <td class="">3</td>
+      <td class="w3-center">3</td>
       <td><a href="https://youtu.be/P3OcPmgMyd8"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_010.jpg" alt="Episode_010.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_013</td>
-      <td class="">2</td>
+      <td class="w3-center">2</td>
       <td><a href="https://youtu.be/Abb7OaNsaHw"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_013.jpg" alt="Episode_013.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_017</td>
-      <td class="">2</td>
+      <td class="w3-center">2</td>
       <td><a href="https://youtu.be/TIYKTknTRK8"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_017.jpg" alt="Episode_017.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_018</td>
-      <td class="">4</td>
+      <td class="w3-center">4</td>
       <td><a href="https://youtu.be/y6eoFAYcjS4"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_018.jpg" alt="Episode_018.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_020</td>
-      <td class="">3</td>
+      <td class="w3-center">3</td>
       <td><a href="https://youtu.be/4UwpehNAnFM"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_020.jpg" alt="Episode_020.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_022</td>
-      <td class="">5</td>
+      <td class="w3-center">5</td>
       <td><a href="https://youtu.be/XhRmM8SJAUs"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_022.jpg" alt="Episode_022.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_023</td>
-      <td class="">4</td>
+      <td class="w3-center">4</td>
       <td><a href="https://youtu.be/FNJdXytEcWw"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_023.jpg" alt="Episode_023.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_026</td>
-      <td class="">3</td>
+      <td class="w3-center">3</td>
       <td><a href="https://youtu.be/uL0hF_nj0pU"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_026.jpg" alt="Episode_026.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_028</td>
-      <td class="">4</td>
+      <td class="w3-center">4</td>
       <td><a href="https://youtu.be/XG_HZmU8IOk"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_028.jpg" alt="Episode_028.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_030</td>
-      <td class="">3</td>
+      <td class="w3-center">3</td>
       <td><a href="https://youtu.be/jyN49E1L0Og"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_030.jpg" alt="Episode_030.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_038</td>
-      <td class="">5</td>
+      <td class="w3-center">5</td>
       <td><a href="https://youtu.be/eRN_6u6bILU"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_038.jpg" alt="Episode_038.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_039</td>
-      <td class="">4</td>
+      <td class="w3-center">4</td>
       <td><a href="https://youtu.be/T7DABGTtYlw"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_039.jpg" alt="Episode_039.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_041</td>
-      <td class="">3</td>
+      <td class="w3-center">3</td>
       <td><a href="https://youtu.be/dkcSUTA-qwE"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_041.jpg" alt="Episode_041.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_042</td>
-      <td class="">3</td>
+      <td class="w3-center">3</td>
       <td><a href="https://youtu.be/clfhMmMd6kY"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_042.jpg" alt="Episode_042.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_046</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/HWGmYTf4IEo"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_046.jpg" alt="Episode_046.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_047</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/kMJOQjm0oiU"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_047.jpg" alt="Episode_047.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_049</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/at_rAyDldtE"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_049.jpg" alt="Episode_049.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_051</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/K7jEj4renfA"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_051.jpg" alt="Episode_051.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_052</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/39xe_-sn5jc"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_052.jpg" alt="Episode_052.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_057</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/T1tt9kmwG7o"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_057.jpg" alt="Episode_057.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_061</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/HtxFpK9wreo"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_061.jpg" alt="Episode_061.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_065</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/k4mugmfF610"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_065.jpg" alt="Episode_065.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_067</td>
-      <td class="">5</td>
+      <td class="w3-center">5</td>
       <td><a href="https://youtu.be/0YJL9tLGrqA"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_067.jpg" alt="Episode_067.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_069</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/QFSMpnIUugs"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_069.jpg" alt="Episode_069.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_071</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/WamTEsDW7G4"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_071.jpg" alt="Episode_071.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_075</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/WtW8pKOgm9c"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_075.jpg" alt="Episode_075.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_076</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/62wvSN_SeRY"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_076.jpg" alt="Episode_076.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_080</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/UcrCmiKR8ik"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_080.jpg" alt="Episode_080.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_081</td>
-      <td class="">8</td>
+      <td class="w3-center">8</td>
       <td><a href="https://youtu.be/_hh4d1o7Ai8"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_081.jpg" alt="Episode_081.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_085</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/RmtOrncWZCY"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_085.jpg" alt="Episode_085.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_088</td>
-      <td class="">8</td>
+      <td class="w3-center">8</td>
       <td><a href="https://youtu.be/VgllJRJvoTA"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_088.jpg" alt="Episode_088.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_089</td>
-      <td class="">8</td>
+      <td class="w3-center">8</td>
       <td><a href="https://youtu.be/Ba92LphJ8O0"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_089.jpg" alt="Episode_089.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_096</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/GNyAv33K7PM"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_096.jpg" alt="Episode_096.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_097</td>
-      <td class="">7</td>
+      <td class="w3-center">7</td>
       <td><a href="https://youtu.be/C-MEGTx8K30"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_097.jpg" alt="Episode_097.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_101</td>
-      <td class="">8</td>
+      <td class="w3-center">8</td>
       <td><a href="https://youtu.be/6I6n_J6l5a4"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_101.jpg" alt="Episode_101.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_103</td>
-      <td class="">6</td>
+      <td class="w3-center">6</td>
       <td><a href="https://youtu.be/buyVh1Tb5To"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_103.jpg" alt="Episode_103.jpg" style="width:100px"></a></td>
     </tr>
     <tr>
       <td>Episode_104</td>
-      <td class="">5</td>
+      <td class="w3-center">5</td>
       <td><a href="https://youtu.be/I8YAltx4YmY"><img class="w3-right w3-round w3-hover-sepia" src="assets/img/Episode_104.jpg" alt="Episode_104.jpg" style="width:100px"></a></td>
     </tr>
   </table>
